# event_controller

./: CMakeLists.txt  README.md  controller.cpp  main.cpp
include/: controller.h  controller_types.h  thread_local_subscriber_storage.h
src/: controller.cpp
tests/: test.cpp
